# edinferno

./: .gitignore  Doxyfile  LICENSE  README.md  catkin_make_edante.sh  catkin_make_tools.sh  groups  index.html  params.json  project.config
edante/: .git_no_ignore
edante/agent/: CMakeLists.txt  package.xml  setup.py
edante/agent/scripts/: adhoc.py  game.py
edante/camera/: CMakeLists.txt  package.xml
edante/camera/src/: camera.cpp  camera_module.cpp  camera_node.cpp
edante/camera/srv/: GetColorTable.srv  SetActiveCamera.srv  SetColorSpace.srv  SetColorTable.srv  SetResolution.srv
edante/comms/: CMakeLists.txt  package.xml
edante/comms/include/: Communication.h  Mental.h  SPLStandardMessage.h  Space.h  Time.h
edante/comms/launch/: launcher.launch
edante/comms/msg/: SPLStdMsg.msg
edante/comms/src/: CommsWrapper.cpp  Communication.cpp  SPLStandardMessage.cpp  comms.cpp  comms_node.cpp
edante/comms/test/: Makefile  test-comms.cpp
edante/edante/: CMakeLists.txt  package.xml
edante/edante/launch/: full_game.launch  joy_remote.launch  localization.launch  params.launch  track_ball.launch
edante/edante_msgs/agent_msgs/: CMakeLists.txt  package.xml
edante/edante_msgs/camera_msgs/: CMakeLists.txt  package.xml
edante/edante_msgs/comms_msgs/: CMakeLists.txt  package.xml
edante/edante_msgs/localization_msgs/: CMakeLists.txt  package.xml
edante/edante_msgs/motion_msgs/: CMakeLists.txt  package.xml
edante/edante_msgs/motion_planning_msgs/: CMakeLists.txt  package.xml
edante/edante_msgs/navigation_msgs/: CMakeLists.txt  package.xml
edante/edante_msgs/sensing_msgs/: CMakeLists.txt  package.xml
edante/edante_msgs/signalling_msgs/: CMakeLists.txt  package.xml
edante/edante_msgs/spl_msgs/: CMakeLists.txt  package.xml
edante/edante_msgs/vision_msgs/: CMakeLists.txt  package.xml
edante/launch/: full_game.launch
edante/localization/: CMakeLists.txt  package.xml
edante/localization/src/: localization.cpp  ptam_wrapper.cpp
edante/motion/: CMakeLists.txt  mainpage.dox  motion_wrapper.cpp  motion_wrapper.h  package.xml
edante/motion/include/motion/: body_balancer.hpp  cartesian_control.hpp  fall_manager.hpp  joint_control.hpp  joy_remote.hpp  locomotion_control.hpp  motion_task.hpp  motion_values.hpp  robot_posture.hpp  stiffness_control.hpp
edante/motion/msg/: float32List.msg  moveConfiguration.msg  path.msg  task.msg
edante/motion/src/: ._cartesian_control.cpp  ._cartesian_control.h  ._motion_task_test.cpp  ._motion_wrapper.cpp  body_balancer.cpp  body_balancer.h  cartesian_control.cpp  cartesian_control.h  cartesian_test.cpp  definitions.h  fall_manager.cpp  fall_manager.h  joint_control.cpp  joint_control.h  joint_test.cpp  joyRemote.cpp  joyRemote.h  joy_remote.cpp  joy_remote.h  locomotion_control.cpp  locomotion_control.h  locomotion_test.cpp  motion.cpp  motion_task.cpp  motion_task.h  motion_task_test.cpp  motion_values.h  motion_wrapper.cpp  motion_wrapper.h  robot_posture.cpp  robot_posture.h  srv_test.cpp  stiffness_control.cpp  stiffness_control.h  stiffness_test.cpp  test.cpp
edante/motion/srv/: AngleInterp.srv  EnableBalanceConstraint.srv  GetNextRobotPosition.srv  GetPostureFamily.srv  GetPostureList.srv  GetRobotPosition.srv  GetRobotVelocity.srv  Move.srv  MoveToward.srv  PositionInterpolations.srv  SetEffectorControl.srv  angleInterp.srv  angleInterpSpeed.srv  areResourcesAvailable.srv  changeAngles.srv  changePosition.srv  changeTransform.srv  enableBalanceConstraint.srv  enableEffector.srv  footState.srv  getAngles.srv  getMoveConfig.srv  getPosition.srv  getPostureFamily.srv  getPostureList.srv  getRobotPosition.srv  getStiffness.srv  getTaskList.srv  getTransform.srv  getWalkArmsEnabled.srv  goToBalance.srv  isEnabled.srv  move.srv  moveTo.srv  moveToward.srv  positionInterpolation.srv  positionInterpolations.srv  setAngles.srv  setEffectorControl.srv  setMaxTryNumber.srv  (+8 more)
edante/motion_planning/: CMakeLists.txt  package.xml
edante/navigation/: CMakeLists.txt  package.xml
edante/navigation/src/: move_to.cpp  (+13 more)
edante/net/: CMakeLists.txt  Makefile  package.xml
edante/sensing/: CMakeLists.txt  package.xml
edante/signalling/: CMakeLists.txt  package.xml
edante/vision/: CMakeLists.txt  package.xml
html/: annotated.html  audio_8h_source.html  body__balancer_8cpp.html  body__balancer_8h.html  body__balancer_8h_source.html  cartesian__control_8cpp.html  cartesian__control_8h.html  cartesian__control_8h_source.html  classAudio-members.html  classAudio.html  classBodyBalancer-members.html  classBodyBalancer.html  classCartesianControl-members.html  classCartesianControl.html  classFallManager-members.html  classFallManager.html  classFsr-members.html  classFsr.html  classJointControl-members.html  classJointControl.html  classJoyRemote-members.html  classJoyRemote.html  classLed-members.html  classLed.html  classLocomotionControl-members.html  classLocomotionControl.html  classMotionTask-members.html  classMotionTask.html  classNavigateAction-members.html  classNavigateAction.html  classPower-members.html  classPower.html  classRobotPosture-members.html  classRobotPosture.html  classSitAction-members.html  classSitAction.html  classSonar-members.html  classSonar.html  classStandAction-members.html  classStandAction.html  (+59 more)
html/search/: all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_a.js  all_b.js  all_c.js  all_e.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js
pippi/: Makefile  README  client.c  network.h  server.c
support/: .git_no_ignore
tools/: deploy.sh  install_edante.sh  install_ros_opennao.sh  make_tools.sh
tools/camera_color_calibration/: CMakeLists.txt  package.xml
tools/resources/: autoload.ini  bottom.yaml  naoqi  pitch.yaml  player.yaml  ros  top.yaml
tools/visualiser/: CMakeLists.txt  package.xml
(+207 files in other folders)
