<?xml version="1.0"?>
<package>
  <name>motion</name>
  <version>0.0.0</version>
  <description>The motion package</description>

  <maintainer email="n.nardelli@sms.ed.ac.uk">Nantas Nardelli</maintainer>

  <license>MIT</license> <!-- See main edinferno project -->

  <url type="website">http://github.com/edinferno/edinferno</url>

  <author email="n.nardelli@sms.ed.ac.uk">Nantas Nardelli</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend
  <!--   <test_depend>gtest</test_depend> -->

  <export>
  </export>

</package>
